# camera_zoom_ros

./: CMakeLists.txt  README.md  package.xml
launch/: simple_world.launch
rviz/: camera.rviz
src/: dynamic_zoom.py  mod_zoom.py
urdf/: camera.urdf.xacro
urdf/resources/: table.xacro
worlds/: house.world  simple_world.world
